# FRUIT

./: .gitignore  CHANGELOG.md  CMakeLists.txt  git-flow-version
cmake/: fruit_meta_info.cmake.in  fruit_meta_info.json.in
src/: fruit.f90
